added category of law page and made minor changes to review outgoing income pages

--- a/app/views/solicitor/application-type.html
+++ b/app/views/solicitor/application-type.html
@@ -26,7 +26,7 @@
 
           <h2 class="govuk-heading-xl">Is it a civil or criminal Legal Aid application?</h2>
 
-          <form class="form" action="basic-details" method="post">
+          <form class="form" action="category-law-civil" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
