--- a/app/views/solicitor/review-income.html
+++ b/app/views/solicitor/review-income.html
@@ -19,7 +19,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="review-evidence">Back</a>
+      <a class="govuk-c-back-link" href="application-task-list">Back</a>
       <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item">
