--- a/app/views/solicitor/review-outgoings.html
+++ b/app/views/solicitor/review-outgoings.html
@@ -125,6 +125,80 @@
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
+                  <tbody class="govuk-c-table__body">
+                    <tr class="govuk-c-table__row">
+                      <td class="govuk-c-table__cell">06 Jan 18</td>
+                      <td class="govuk-c-table__cell">Payment from ebay</td>
+                      <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
+                      <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                    </tr>
+                    <tr class="govuk-c-table__row">
+                      <td class="govuk-c-table__cell">18 Jan 18</td>
+                      <td class="govuk-c-table__cell">Cash for tickets</td>
+                      <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
+                      <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                    </tr>
+                    <tr class="govuk-c-table__row">
+                      <td class="govuk-c-table__cell">23 Jan 18</td>
+                      <td class="govuk-c-table__cell">Refund from hairdressers</td>
+                      <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
+                      <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                    </tr>
+                    <tr class="govuk-c-table__row">
+                      <td class="govuk-c-table__cell">26 Jan 18</td>
+                      <td class="govuk-c-table__cell">Interest charge</td>
+                      <td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.23</td>
+                      <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                    </tr>
+                    <tr class="govuk-c-table__row">
+                      <td class="govuk-c-table__cell">03 Feb 18</td>
+                      <td class="govuk-c-table__cell">Transfer from Dave</td>
+                      <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
+                      <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                    </tr>
+                    <tr class="govuk-c-table__row">
+                      <td class="govuk-c-table__cell">06 Feb 18</td>
+                      <td class="govuk-c-table__cell">Transfer from Owen</td>
+                      <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
+                      <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                    </tr>
+                    <tbody class="govuk-c-table__body">
+                      <tr class="govuk-c-table__row">
+                        <td class="govuk-c-table__cell">06 Jan 18</td>
+                        <td class="govuk-c-table__cell">Payment from ebay</td>
+                        <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
+                        <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                      </tr>
+                      <tr class="govuk-c-table__row">
+                        <td class="govuk-c-table__cell">18 Jan 18</td>
+                        <td class="govuk-c-table__cell">Cash for tickets</td>
+                        <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
+                        <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                      </tr>
+                      <tr class="govuk-c-table__row">
+                        <td class="govuk-c-table__cell">23 Jan 18</td>
+                        <td class="govuk-c-table__cell">Refund from hairdressers</td>
+                        <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
+                        <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                      </tr>
+                      <tr class="govuk-c-table__row">
+                        <td class="govuk-c-table__cell">26 Jan 18</td>
+                        <td class="govuk-c-table__cell">Interest charge</td>
+                        <td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.23</td>
+                        <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                      </tr>
+                      <tr class="govuk-c-table__row">
+                        <td class="govuk-c-table__cell">03 Feb 18</td>
+                        <td class="govuk-c-table__cell">Transfer from Dave</td>
+                        <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
+                        <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                      </tr>
+                      <tr class="govuk-c-table__row">
+                        <td class="govuk-c-table__cell">06 Feb 18</td>
+                        <td class="govuk-c-table__cell">Transfer from Owen</td>
+                        <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
+                        <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
+                      </tr>
                 </tbody>
               </table>
               <br>
