fixes to daman's changes

--- a/app/views/solicitor/category-law-civil.html
+++ b/app/views/solicitor/category-law-civil.html
@@ -25,19 +25,26 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            Please select the relevent Category of Law
+            What is the category of law?
           </h2>
-
 
           <form action="basic-details" method="post">
 
-            <select class="govuk-c-select" id="select-1" name="address">
-                <option value="1">Family Law</option>
-                <option value="1">Property Law</option>
-                <option value="1">Contract Law</option>
-                <option value="1">Family Law</option>
-                <option value="1">Family Law</option>
-                <option value="1">Family Law</option>
+            <select class="govuk-c-select" id="select-category" name="category">
+                <option value="1">Clinical negligence</option>
+                <option value="2">Community care</option>
+                <option value="3">Discrimination</option>
+                <option value="4">Domestic abuse</option>
+                <option value="5">Education</option>
+                <option value="6">Employment</option>
+                <option value="7">Family</option>
+                <option value="8">Housing</option>
+                <option value="9">Immigration and asylum</option>
+                <option value="10">Mental health</option>
+                <option value="11">Personal injury</option>
+                <option value="12">Public law</option>
+                <option value="13">Trouble with the police and other public authorities</option>
+                <option value="14">Welfare benefits</option>
               </select>
 
             <br><br>
