--- a/app/views/solicitor/review-outgoings.html
+++ b/app/views/solicitor/review-outgoings.html
@@ -55,8 +55,8 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">06 Jan 18</td>
-                  <td class="govuk-c-table__cell">Halifax Mortgage</td>
-                  <td class="govuk-c-table__cell">Mortgage payment</td>
+                  <td class="govuk-c-table__cell">Rent</td>
+                  <td class="govuk-c-table__cell">Rent payment</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1200.00</td>
                   <td class="govuk-c-table__cell">Mortgage, rent and council tax</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
@@ -91,19 +91,19 @@
                 <tbody class="govuk-c-table__body">
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">06 Jan 18</td>
-                    <td class="govuk-c-table__cell">Payment from ebay</td>
+                    <td class="govuk-c-table__cell">Payment to ebay</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">18 Jan 18</td>
-                    <td class="govuk-c-table__cell">Cash for tickets</td>
+                    <td class="govuk-c-table__cell">Tickets</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">23 Jan 18</td>
-                    <td class="govuk-c-table__cell">Refund from hairdressers</td>
+                    <td class="govuk-c-table__cell">Hairdressers</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
@@ -115,32 +115,32 @@
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">03 Feb 18</td>
-                    <td class="govuk-c-table__cell">Transfer from Dave</td>
+                    <td class="govuk-c-table__cell">Transfer to Dave</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">06 Feb 18</td>
-                    <td class="govuk-c-table__cell">Transfer from Owen</td>
+                    <td class="govuk-c-table__cell">Transfer to Owen</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tbody class="govuk-c-table__body">
                     <tr class="govuk-c-table__row">
                       <td class="govuk-c-table__cell">06 Jan 18</td>
-                      <td class="govuk-c-table__cell">Payment from ebay</td>
+                      <td class="govuk-c-table__cell">Payment to ebay</td>
                       <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
                       <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                     </tr>
                     <tr class="govuk-c-table__row">
                       <td class="govuk-c-table__cell">18 Jan 18</td>
-                      <td class="govuk-c-table__cell">Cash for tickets</td>
+                      <td class="govuk-c-table__cell">Tickets</td>
                       <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
                       <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                     </tr>
                     <tr class="govuk-c-table__row">
                       <td class="govuk-c-table__cell">23 Jan 18</td>
-                      <td class="govuk-c-table__cell">Refund from hairdressers</td>
+                      <td class="govuk-c-table__cell">Hairdressers</td>
                       <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
                       <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                     </tr>
@@ -152,32 +152,32 @@
                     </tr>
                     <tr class="govuk-c-table__row">
                       <td class="govuk-c-table__cell">03 Feb 18</td>
-                      <td class="govuk-c-table__cell">Transfer from Dave</td>
+                      <td class="govuk-c-table__cell">Transfer to Dave</td>
                       <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
                       <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                     </tr>
                     <tr class="govuk-c-table__row">
                       <td class="govuk-c-table__cell">06 Feb 18</td>
-                      <td class="govuk-c-table__cell">Transfer from Owen</td>
+                      <td class="govuk-c-table__cell">Transfer to Owen</td>
                       <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
                       <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                     </tr>
                     <tbody class="govuk-c-table__body">
                       <tr class="govuk-c-table__row">
                         <td class="govuk-c-table__cell">06 Jan 18</td>
-                        <td class="govuk-c-table__cell">Payment from ebay</td>
+                        <td class="govuk-c-table__cell">Payment to ebay</td>
                         <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
                         <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                       </tr>
                       <tr class="govuk-c-table__row">
                         <td class="govuk-c-table__cell">18 Jan 18</td>
-                        <td class="govuk-c-table__cell">Cash for tickets</td>
+                        <td class="govuk-c-table__cell">Tickets</td>
                         <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
                         <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                       </tr>
                       <tr class="govuk-c-table__row">
                         <td class="govuk-c-table__cell">23 Jan 18</td>
-                        <td class="govuk-c-table__cell">Refund from hairdressers</td>
+                        <td class="govuk-c-table__cell">Hairdressers</td>
                         <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
                         <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                       </tr>
@@ -189,17 +189,17 @@
                       </tr>
                       <tr class="govuk-c-table__row">
                         <td class="govuk-c-table__cell">03 Feb 18</td>
-                        <td class="govuk-c-table__cell">Transfer from Dave</td>
+                        <td class="govuk-c-table__cell">Transfer to Dave</td>
                         <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
                         <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                       </tr>
                       <tr class="govuk-c-table__row">
                         <td class="govuk-c-table__cell">06 Feb 18</td>
-                        <td class="govuk-c-table__cell">Transfer from Owen</td>
+                        <td class="govuk-c-table__cell">Transfer to Owen</td>
                         <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
                         <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                       </tr>
-                </tbody>
+                    </tbody>
               </table>
               <br>
 
