--- a/app/views/solicitor/declared-shares.html
+++ b/app/views/solicitor/declared-shares.html
@@ -31,12 +31,14 @@
               <tr class="govuk-c-table__row">
                 <th class="govuk-c-table__header" scope="col" style="border-width:thick; width:500px">Type</th>
                 <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick; width:500px">Amount</th>
+                <th class="govuk-c-table__header" scope="col" style="border-width:thick"></th>
               </tr>
             </thead>
             <tbody class="govuk-c-table__body">
               <tr class="govuk-c-table__row">
                 <td class="govuk-c-table__cell">Stocks and shares</td>
                 <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1000</td>
+                <td class="govuk-c-table__cell"><a href='#'>Amend</a></td>
               </tr>
             </tbody>
           </table>
