--- a/app/views/citizen-truelayer/cash-amount.html
+++ b/app/views/citizen-truelayer/cash-amount.html
@@ -22,12 +22,12 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          How much income did you receive that was not paid into your bank?
+          How much cash were you paid in the last 30 days?
         </h1>
         <form class="form" action="cash" method="post">
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="other-income">
-            <h3>Enter the value of this income</h3>
+            <label class="govuk-c-label">Enter the value of this income</label>
 
           </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="other-income" name="other-income" placeholder="0.00" type="number">
