--- a/app/views/citizen-truelayer/identify-income-salary-other.html
+++ b/app/views/citizen-truelayer/identify-income-salary-other.html
@@ -449,11 +449,11 @@
           </li>
           <li>
             <h2 class="task-list-section">
-              <span class="task-list-section-number">2. </span>Benefits, rent and financial support</h2>
+                    <span class="task-list-section-number">2. </span>Benefits, property and financial support</h2>
                   <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add any state benefits, rent from a property or lodger, student loans, and maintenance payments
+              Add any state benefits, rental income from a property or lodger, student loans and maintenance payments
             </span></p>
-          <details>
+            <details>
           <summary><span class="summary">What should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
