--- a/app/views/citizen-truelayer/identify-outgoings-housing-childcare.html
+++ b/app/views/citizen-truelayer/identify-outgoings-housing-childcare.html
@@ -454,7 +454,7 @@
               <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
             </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add childcare payments to a registered provider, maintenance payments and existing legal aid contributions 
+              Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions 
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
