--- a/app/views/citizen-truelayer/national-savings-amount.html
+++ b/app/views/citizen-truelayer/national-savings-amount.html
@@ -25,9 +25,12 @@
           What is the value of your National Savings Certificates?
         </h1>
         <form class="form" action="premium-bonds" method="post">
+          <div class="govuk-o-form-group"><label class="govuk-c-label" for="national-savings-amount">
+            <label class="govuk-c-label">Enter amount</label>
 
+          </label>
           <div class="govuk-o-form-group">
-            £ <input class="govuk-c-input govuk-!-width-two-thirds" id="nsi-amount" name="nsi-amount" placeholder="0.00" type="number">
+            <br>£ <input class="govuk-c-input govuk-!-width-two-thirds" id="nsi-amount" name="nsi-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
