--- a/app/views/citizen-truelayer/obbank.html
+++ b/app/views/citizen-truelayer/obbank.html
@@ -40,7 +40,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link " href="dwpdetails">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
