--- a/app/views/citizen-truelayer/obconsent.html
+++ b/app/views/citizen-truelayer/obconsent.html
@@ -29,9 +29,9 @@
                 <h1 class="govuk-heading-xl">Do you agree to share your details with us?</h1>
               </legend>
 
-              <p class="govuk-body">Sign in safely to your online banking and give permission for us to access your accounts for 1 hour.</p>
+              <p class="govuk-body">Sign in safely to your online banking and give permission for us to access your bank accounts for 1 hour.</p>
 
-              <p class="govuk-body">We only use your bank transactions to support your legal aid application. We do not use it for anything else.</p>
+              <p class="govuk-body">We only use your bank transactions to support your legal aid application. We do not use the information for anything else.</p>
 
               <p class="govuk-body"><a href="#">Find out how we use and store your personal data</a></p>
 
