--- a/app/views/citizen-truelayer/premium-bonds-amount.html
+++ b/app/views/citizen-truelayer/premium-bonds-amount.html
@@ -24,10 +24,15 @@
         <h1 class="govuk-heading-xl">
           What is the value of your Premium Bonds?
         </h1>
+
+                <form class="form" action="capital-bonds" method="post">
+          <div class="govuk-o-form-group"><label class="govuk-c-label" for="premium-bonds-amount">
+            <label class="govuk-c-label">Enter amount</label>
+
         <form class="form" action="capital-bonds" method="post">
 
           <div class="govuk-o-form-group">
-            £ <input class="govuk-c-input govuk-!-width-two-thirds" id="pb-amount" name="pb-amount" placeholder="0.00" type="number">
+           <br> £ <input class="govuk-c-input govuk-!-width-two-thirds" id="pb-amount" name="pb-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
