--- a/app/views/citizen-truelayer/property-amount.html
+++ b/app/views/citizen-truelayer/property-amount.html
@@ -24,20 +24,13 @@
         <h1 class="govuk-heading-xl">
           How much is your property worth?
         </h1>
-        <form class="form" action="capital-assets" method="post">
+        <form class="form" action="mortgage-amount" method="post">
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="property-amount">
-            <h3>Enter the estimated value of your property</h3>
+            <label class="govuk-c-label">Enter the estimated value of your property</label>
 
           </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="property-amount" name="property-amount" placeholder="0.00" type="number">
-          </div>
-
-          <div class="govuk-o-form-group"><label class="govuk-c-label" for="mortgage-amount">
-            <h3>If you have one, enter the amount currently outstanding on your mortgage</h3>
-
-          </label> <br>£
-            <input class="govuk-c-input govuk-!-width-two-thirds" id="mortgage-amount" name="mortgage-amount" placeholder="0.00" type="number">
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">
