--- a/app/views/citizen-truelayer/select-other.html
+++ b/app/views/citizen-truelayer/select-other.html
@@ -109,11 +109,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select benefits, rent and financial support
+              Select benefits, property and financial support
         </h2>
 
 
-        <p class="govuk-body">Add any state benefits, rent from a property or lodger, student loans and maintenance payments.</p>
+        <p class="govuk-body">Add any state benefits, rental income from a property or lodger, student loans and maintenance payments.</p>
         <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <details>
