--- a/app/views/citizen-truelayer/start.html
+++ b/app/views/citizen-truelayer/start.html
@@ -31,7 +31,7 @@
           Name:    <strong>John Doe</strong><br>
           Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
 
-        <p class="govuk-body">Find out if your financial situation means you can get legal aid.</p>
+        <p class="govuk-body">Find out if you can get legal aid because of your financial situation.</p>
 
          <p class="govuk-body">You might not have to pay legal costs if you are on certain benefits, a low income or have little or no savings.</p>
 
