--- a/app/views/solicitor/confirm-contact.html
+++ b/app/views/solicitor/confirm-contact.html
@@ -24,7 +24,7 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
           <p></p>
-          <h2>You have successfully created a new application</h2>
+          <h2>You have successfully created a new legal aid application</h2>
           <p></p>
           <form class="form" action="case-dashboard" method="post">
 
