--- a/app/views/solicitor/email-address.html
+++ b/app/views/solicitor/email-address.html
@@ -29,7 +29,7 @@
             What is your client's email address?
           </h2>
 
-          <p class="govuk-body">JOSH: copy needed here?</p>
+          <p class="govuk-body">You can send a secure link giving access to the legal aid financial assessment.</p>
 
           <form class="form" action="basic-details-playback" method="post">
 
