--- a/app/views/citizen-truelayer/dwpdetails.html
+++ b/app/views/citizen-truelayer/dwpdetails.html
@@ -15,7 +15,7 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="obconsent">Back</a>
-
+    <p class="govuk-body"></p>
     <div class="govuk-o-grid">
 
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
