--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -34,7 +34,7 @@
             £255.00 a month
           </h2>
           <div class="govuk-c-panel__body">
-            for 6 months, or a single payment of
+            for 6 months<br><br> or a single payment of
           </div>
           <br>
           <h2 class="govuk-c-panel__title">
@@ -127,7 +127,7 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Child care</td>
+                  <td class="govuk-c-table__cell">Childcare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
