--- a/app/views/citizen-truelayer/mortgage-amount.html
+++ b/app/views/citizen-truelayer/mortgage-amount.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="other-income">Back</a>
+    <a class="govuk-c-back-link" href="identify-outgoings-housing-childcare">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -22,16 +22,17 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          What was the value of the benefits in kind?
+         What is the outstanding mortgage on your property?
         </h1>
-        <form class="form" action="identify-outgoings" method="post">
+        <form class="form" action="capital-assets" method="post">
 
-          <div class="govuk-o-form-group"><label class="govuk-c-label" for="benefits-amount">
-            <label class="govuk-c-label">Enter the value of the benefits in kind</label>
+          <div class="govuk-o-form-group"><label class="govuk-c-label" for="mortgage-amount">
+            <label class="govuk-c-label">Enter outstanding mortgage amount</label>
 
           </label> <br>£
-            <input class="govuk-c-input govuk-!-width-two-thirds" id="benefits-amount" name="benefits-amount" placeholder="0.00" type="number">
+            <input class="govuk-c-input govuk-!-width-two-thirds" id="mortgage-amount" name="mortgage-amount" placeholder="0.00" type="number">
           </div>
+
           <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
