--- a/app/views/citizen-truelayer/other-income.html
+++ b/app/views/citizen-truelayer/other-income.html
@@ -26,7 +26,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              **** Did you receive any income not paid into your bank?
+              Do you receive any income paid in cash?
         </h2>
 
         <form action="/citizen-truelayer/cash" method="get">
@@ -34,7 +34,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <p class="govuk-body">For example, if you get paid in cash for a temporary or casual job.</p>
+                <p class="govuk-body">For example, payment for a temporary or casual job.</p>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="cash-1" name="cash" type="radio" value="yes" required>
