--- a/app/views/citizen-truelayer/other-savings-amount.html
+++ b/app/views/citizen-truelayer/other-savings-amount.html
@@ -24,10 +24,14 @@
         <h1 class="govuk-heading-xl">
           What is the value of your other savings?
         </h1>
-        <form class="form" action="means-result" method="post">
+       <form class="form" action="means-result
+       " method="post">
+          <div class="govuk-o-form-group"><label class="govuk-c-label" for="premium-bonds-amount">
+            <label class="govuk-c-label">Enter amount</label>
+        <form class="form" action="other-savings" method="post">
 
           <div class="govuk-o-form-group">
-            £ <input class="govuk-c-input govuk-!-width-two-thirds" id="os-amount" name="os-amount" placeholder="0.00" type="number">
+          <br>  £ <input class="govuk-c-input govuk-!-width-two-thirds" id="os-amount" name="os-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
