--- a/app/views/citizen-truelayer/submit-means.html
+++ b/app/views/citizen-truelayer/submit-means.html
@@ -24,16 +24,24 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Next steps
+          You have finished your financial assessment
         </h1>
 
         <p class="govuk-body">
           Name: <strong>John Doe</strong><br> Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
 
+        
+        <h2>What happens next</h2>
+        <br>
+
         <p class="govuk-body">Your results have been submitted to the Legal Aid Agency and to your solicitor.</p>
 
 
         <p class="govuk-body">Your solicitor will contact you to complete your legal aid application.</p>
+
+
+
+            <input class="govuk-c-button" type="submit" value="Finish">
 
       </div>
     </div>
