--- a/app/views/solicitor/basic-details.html
+++ b/app/views/solicitor/basic-details.html
@@ -20,12 +20,12 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="application-type">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            What is your client's name?
+            What is your client's full name?
           </h2>
 
           <form class="form" action="postcode" method="post">
