--- a/app/views/solicitor/online-banking.html
+++ b/app/views/solicitor/online-banking.html
@@ -26,13 +26,13 @@
 
           <p></p>
           <h2 class="govuk-heading-xl">
-            Does your client have online banking and wish to remotely complete the legal aid assessment?
+            Does your client use online banking?
           </h2>
 
-          <form class="form" action="email-address" method="post">
+          <form class="form" action="complete-remote" method="post">
 
 
-            <p class="govuk-body">We will ask for temporary 1 hour access to your client's bank accounts to check their financial details.</p>
+            <p class="govuk-body">Your client can share their bank details securely online. We will ask for temporary access to their bank accounts for 1 hour.</p>
 
 
             <div class="govuk-c-radios">
