--- a/app/views/solicitor/postcode.html
+++ b/app/views/solicitor/postcode.html
@@ -20,11 +20,10 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="basic-details">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <p></p>
           <h2 class="govuk-heading-xl">
             What is your client’s home address?
           </h2>
