--- a/app/views/solicitor/select-address.html
+++ b/app/views/solicitor/select-address.html
@@ -20,7 +20,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="postcode">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -28,7 +28,9 @@
             What is your client’s home address?
           </h2>
 
-
+            <label class="govuk-c-label" for="name">
+              Select address
+            </label>
           <form action="national-insurance" method="post">
 
             <select class="govuk-c-select" id="select-1" name="address">
