Minor copy amends to conflicts
The files that wouldn't merge before

--- a/app/views/citizen-truelayer/identify-income-salary-other.html
+++ b/app/views/citizen-truelayer/identify-income-salary-other.html
@@ -434,7 +434,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">
-                  BACS Transfer Tyreworld - £1800.00
+                  TYREWORLD BACS - £1800.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
@@ -472,10 +472,11 @@
           </div>
         </details>
         <br>
+
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-completed">
-                  Child maintenance - £250.00
+                  CHILD MAINTENANCE - £250.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
