--- a/app/views/citizen-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing.html
@@ -419,7 +419,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-                <h2 class="govuk-heading-xl">
+        <h2 class="govuk-heading-xl">
               Tell us about your outgoings over the last 30 days
         </h2>
         <p class="govuk-body">
@@ -431,13 +431,13 @@
             <h2 class="task-list-section">
                 <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
             </h2>
-              <p class="govuk-body"><span class="govuk-c-label__hint">
+            <p class="govuk-body"><span class="govuk-c-label__hint">
               Add payments for mortgage, rent, board or lodging, and council tax bills
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                    MyLandlord Letting Agents - £1200.00
+                    RENT - £1200.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
@@ -456,6 +456,7 @@
             </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
               Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions 
+
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
