--- a/app/views/solicitor/basic-details-playback.html
+++ b/app/views/solicitor/basic-details-playback.html
@@ -39,7 +39,17 @@
                   </a>
                 </dd>
               </div>
-
+              
+              <div>
+                <dt class="cya-question" style="width:275px">Category of law</dt>
+                <dd class="cya-answer">Domestic abuse</dd>
+                <dd class="cya-change">
+                  <a class="govuk-link" href="basic-details">
+                    Change<span class="visually-hidden">type</span>
+                  </a>
+                </dd>
+              </div>
+              
               <div>
                 <dt class="cya-question">Name</dt>
                 <dd class="cya-answer">{{ data['name'] }}</dd>
