--- a/app/views/solicitor/complete-remote.html
+++ b/app/views/solicitor/complete-remote.html
@@ -26,15 +26,11 @@
 
           <p></p>
           <h2 class="govuk-heading-xl">
-            Does your client want to complete the financial assessment remotely?
+            Does your client want to do their financial assessment from home or another location?
           </h2>
 
           <form class="form" action="email-address" method="post">
-
-
-            <p class="govuk-body">Let your client complete the legal aid financial assessment from home or another location.</p>
-
-
+            
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
