--- a/app/views/citizen-truelayer/benefits-kind-amount.html
+++ b/app/views/citizen-truelayer/benefits-kind-amount.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="other-income">Back</a>
+    <a class="govuk-c-back-link" href="benefits-kind">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -29,7 +29,7 @@
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="benefits-amount">
             <label class="govuk-c-label">Enter the value of the benefits in kind</label>
 
-          </label> <br>£
+            </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="benefits-amount" name="benefits-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
