--- a/app/views/citizen-truelayer/cash-amount.html
+++ b/app/views/citizen-truelayer/cash-amount.html
@@ -24,12 +24,12 @@
         <h1 class="govuk-heading-xl">
           How much cash were you paid in the last 30 days?
         </h1>
-        <form class="form" action="cash" method="post">
+        <form class="form" action="paid-in-bank" method="post">
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="other-income">
             <label class="govuk-c-label">Enter the value of this income</label>
 
-          </label> <br>£
+            </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="other-income" name="other-income" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
