--- a/app/views/solicitor/application-type.html
+++ b/app/views/solicitor/application-type.html
@@ -20,7 +20,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="start">Back</a>
-    <p class="govuk-body"></p>
+      <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -31,13 +31,13 @@
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="applicationType1" name="applicationType" type="radio" value="civil" required>
+                  <input class="govuk-c-radios__input" id="applicationType1" name="applicationType" type="radio" value="Civil" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="applicationType1">
                 Civil
               </label>
                 </div>
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="applicationType2" name="applicationType" type="radio" value="crime">
+                  <input class="govuk-c-radios__input" id="applicationType2" name="applicationType" type="radio" value="Crime">
                   <label class="govuk-c-label govuk-c-radios__label" for="applicationType2">
                 Criminal
               </label>
