--- a/app/views/solicitor/category-law-civil.html
+++ b/app/views/solicitor/category-law-civil.html
@@ -20,7 +20,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="application-type">Back</a>
-    <p class="govuk-body"></p>
+      <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -31,20 +31,20 @@
           <form action="basic-details" method="post">
 
             <select class="govuk-c-select" id="select-category" name="category">
-                <option value="1">Clinical negligence</option>
-                <option value="2">Community care</option>
-                <option value="3">Discrimination</option>
-                <option value="4">Domestic abuse</option>
-                <option value="5">Education</option>
-                <option value="6">Employment</option>
-                <option value="7">Family</option>
-                <option value="8">Housing</option>
-                <option value="9">Immigration and asylum</option>
-                <option value="10">Mental health</option>
-                <option value="11">Personal injury</option>
-                <option value="12">Public law</option>
-                <option value="13">Trouble with the police and other public authorities</option>
-                <option value="14">Welfare benefits</option>
+                <option value="Clinical negligence">Clinical negligence</option>
+                <option value="Community care">Community care</option>
+                <option value="Discrimination">Discrimination</option>
+                <option value="Domestic abuse">Domestic abuse</option>
+                <option value="Education">Education</option>
+                <option value="Employment">Employment</option>
+                <option value="Family">Family</option>
+                <option value="Housing">Housing</option>
+                <option value="Immigration and asylum">Immigration and asylum</option>
+                <option value="Mental health">Mental health</option>
+                <option value="Personal injury">Personal injury</option>
+                <option value="Public law">Public law</option>
+                <option value="Trouble with the police and other public authorities">Trouble with the police and other public authorities</option>
+                <option value="Welfare benefits">Welfare benefits</option>
               </select>
 
             <br><br>
