--- a/app/views/citizen-truelayer/paid-in-bank.html
+++ b/app/views/citizen-truelayer/paid-in-bank.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="other-income">Back</a>
+    <a class="govuk-c-back-link" href="cash-amount">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -29,7 +29,7 @@
               Did you pay the cash into your bank?
         </h2>
 
-        <form action="/citizen-truelayer/cash" method="get">
+        <form action="benefits-kind" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
