--- a/app/views/solicitor/granted-access.html
+++ b/app/views/solicitor/granted-access.html
@@ -33,30 +33,34 @@
           <table class="govuk-c-table--two-thirds" style="border-spacing:0">
             <thead class="govuk-c-table__head">
               <tr class="govuk-c-table__row">
+                <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Bank</th>
                 <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Type</th>
-                <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Account number</th>
+                <!--th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Account number</th-->
                 <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Sort code</th>
-                <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Balance</th>
+                <!--th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Balance</th-->
               </tr>
             </thead>
             <tbody class="govuk-c-table__body">
               <tr class="govuk-c-table__row">
-                <td class="govuk-c-table__cell">Mock Bank Current account</td>
-                <td class="govuk-c-table__cell govuk-c-table__cell--numeric">123456789</td>
+                <td class="govuk-c-table__cell">Mock Bank</td>
+                <td class="govuk-c-table__cell">Current account</td>
+                <!--td class="govuk-c-table__cell govuk-c-table__cell--numeric">123456789</td-->
                 <td class="govuk-c-table__cell govuk-c-table__header--numeric">43-54-22</td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£470.00</td>
+                <!--td class="govuk-c-table__cell govuk-c-table__header--numeric">£470.00</td-->
               </tr>
               <tr class="govuk-c-table__row">
-                <td class="govuk-c-table__cell">Mock Bank Savings account</td>
-                <td class="govuk-c-table__cell govuk-c-table__cell--numeric">987654321</td>
+                <td class="govuk-c-table__cell">Mock Bank</td>
+                <td class="govuk-c-table__cell">Savings account</td>
+                <!--td class="govuk-c-table__cell govuk-c-table__cell--numeric">987654321</td-->
                 <td class="govuk-c-table__cell govuk-c-table__header--numeric">43-54-22</td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1400.00</td>
+                <!--td class="govuk-c-table__cell govuk-c-table__header--numeric">£1400.00</td-->
               </tr>
               <tr class="govuk-c-table__row">
-                <td class="govuk-c-table__cell">Mock Bank Cash ISA</td>
-                <td class="govuk-c-table__cell govuk-c-table__cell--numeric">248163264</td>
+                <td class="govuk-c-table__cell">Mock Bank</td>
+                <td class="govuk-c-table__cell">Cash ISA</td>
+                <!--td class="govuk-c-table__cell govuk-c-table__cell--numeric">248163264</td-->
                 <td class="govuk-c-table__cell govuk-c-table__header--numeric">43-54-22</td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.00</td>
+                <!--td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.00</td-->
               </tr>
             </tbody>
           </table>
